# Conways-Game-of-Life

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  svelte.config.js
components/: Board.jsx  Cell.jsx  Info.jsx  learn.jsx
pages/: game.jsx  index.jsx  learn.jsx
python-game/: main.py  pyproject.toml
src/components/: Board.svelte  Cell.svelte  Info.svelte
src/lib/: theme.js
src/routes/: +layout.svelte  +page.svelte
src/routes/game/: +page.svelte
src/routes/learn/: +page.svelte
